--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-webcam": "^0.4.1",
+    "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
