--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "ngx-webcam": "^0.4.1",
     "primeng": "^17.18.7",
